unpackaged/main/default/objects/Evaluation_des_plaies__c/Evaluation_des_plaies__c.object-meta.xml
<CustomObject>
    <label>Evaluation des plaies</label>
    <nameField>
        <displayFormat>EP-{00000000}</displayFormat>
        <label>Nom de Evaluation des plaies</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations des plaies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>