unpackaged/main/default/objects/Evaluation_des_plaies__c/fields/Date_d_observtion__c.field-meta.xml
<CustomField>
    <fullName>Date_d_observtion__c</fullName>
    <label>Date d&apos;observtion</label>
    <type>Date</type>
</CustomField>