unpackaged/main/default/objects/Evaluation_des_plaies__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Evaluations des plaies</relationshipLabel>
    <relationshipName>Evaluations_des_plaies</relationshipName>
    <type>Lookup</type>
</CustomField>