unpackaged/main/default/objects/Evaluation_des_plaies__c/fields/No_de_plaie__c.field-meta.xml
<CustomField>
    <fullName>No_de_plaie__c</fullName>
    <label>No de plaie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>