unpackaged/main/default/objects/Evaluation_des_plaies__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Evaluations des plaies</relationshipLabel>
    <relationshipName>Evaluations_des_plaies</relationshipName>
    <type>Lookup</type>
</CustomField>